duniverse/menhirLib.20200211/test/static/bad/unknown_symbol_in_type.mly
%token A B
%start<unit> main
%type<int> FOO (* does not exist *)

%%

main: A B {}
