duniverse/menhirLib.20200211/test/static/bad/unknown_symbol_in_type.exp
File "unknown_symbol_in_type.mly", line 3, characters 11-14:
Error: FOO is undefined.
